Make sure the ad text aligns to the left

--- a/views/style/application.sass
+++ b/views/style/application.sass
@@ -106,8 +106,8 @@ div#ad, footer
   bottom: 10px
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
   font-size: 11px
-
   line-height: 120%
+  text-align: left
 
   a
     color: $dark
